@@ -285,6 +285,8 @@ C-API
 Library
 -------
 
+- Issue #8179: Fix macpath.realpath() on a non-existing path.
+
 - Issue #8024: Update the Unicode database to 5.2.
 
 - Issue #8168: py_compile now handles files with utf-8 BOMS.
